fix text-align: center (did it wrong the first time

--- a/portfolio_styles.css
+++ b/portfolio_styles.css
@@ -79,7 +79,7 @@ section#about h1 {
 
 section#about p {
     font-size: 2rem;
-    align-text: center;
+    text-align: center;
 }
 
 section#about img {
